updates based on sonar